alteração-text-align

--- a/assets/style.css
+++ b/assets/style.css
@@ -159,7 +159,7 @@ main {
     color: #fff;
     margin-bottom: 1.5rem;
     text-indent: 30px;
-    text-align: justify;
+    text-align: center;
 }
 
 .skills {
